crates/pixi_utils/src/snapshots/pixi__utils__conda_environment_file__tests__test_import_from_env_yaml.test_env.yml.snap
---
source: src/utils/conda_environment_file.rs
expression: "(parse_dependencies(env_info.dependencies().clone()).unwrap(),\n    parse_channels(env_info.channels().clone()), env_info.name())"
---
(
    (
        [
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3], [5], [5]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "setuptools",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [39], [1], [0]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "wheel",
                    },
                ),
                version: Some(
                    Range(
                        LessEquals,
                        Version {
                            version: [[0], [0], [31], [1]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
            },
        ],
        [
            Requirement {
                name: PackageName(
                    "package1",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package2",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package3",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "3",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package4",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThanEqual,
                                    version: "4.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package5",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: "5.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package6",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThan,
                                    version: "6.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package7",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThan,
                                    version: "7.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package8",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: NotEqual,
                                    version: "8.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package9",
                ),
                extras: [],
                version_or_url: None,
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package10",
                ),
                extras: [
                    ExtraName(
                        "extra",
                    ),
                ],
                version_or_url: None,
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package11",
                ),
                extras: [
                    ExtraName(
                        "extra1",
                    ),
                    ExtraName(
                        "extra2",
                    ),
                ],
                version_or_url: None,
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package12",
                ),
                extras: [
                    ExtraName(
                        "extra1",
                    ),
                    ExtraName(
                        "extra2",
                    ),
                ],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "12.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package13",
                ),
                extras: [
                    ExtraName(
                        "extra1",
                    ),
                    ExtraName(
                        "extra2",
                    ),
                ],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: "13.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "package14",
                ),
                extras: [
                    ExtraName(
                        "extra1",
                    ),
                    ExtraName(
                        "extra2",
                    ),
                ],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThanEqual,
                                    version: "14.0.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
                origin: None,
            },
        ],
        [],
    ),
    [
        Name(
            "main",
        ),
        Name(
            "r",
        ),
        Name(
            "msys2",
        ),
        Name(
            "conda-forge",
        ),
    ],
    Some(
        "test_env",
    ),
)
